--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZnJlc2gtd29tYmF0LTI2LmNsZXJrLmFjY291bnRzLmRldiQ
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_ZnJlc2gtd29tYmF0LTI2LmNsZXJrLmFjY291bnRzLmRldiQ"
 
 API_KEY="AIzaSyAbnaozeWz9E9Kh_RnJtGFUeaVIcMhvExU"
 MESSAGIN_ID = "228550178720"
